@@ -1,15 +1,18 @@
-##parameters=workflow_action, REQUEST=None, **kw
+##parameters=workflow_action, comment='', REQUEST=None, **kw
 # $Id$
-"""
-FIXME: add docstring.
-"""
+"""Generic workflow script to trigger the transitions"""
 
 wftool = context.portal_workflow
 
 if REQUEST is not None:
     kw.update(REQUEST.form)
 
+# BBB: comment is now singular internally but not yet in all templates
 comments = kw.get('comments', '')
+if comments:
+    del kw['comments']
+comment = comment or comments
+kw['comment'] = comment
 
 folder = context.aq_parent
 id = context.getId()
@@ -17,11 +20,30 @@ url = None
 
 psm = 'psm_status_changed'
 
-if workflow_action != 'copy_submit':
+if wftool.isBehaviorAllowedFor(context, wftool.TRANSITION_BEHAVIOR_PUBLISHING,
+                               transition=workflow_action):
+    # cloning / publishing: copy and initalize proxy into one or more target
+    # folders
+    allowed_transitions = wftool.getAllowedPublishingTransitions(context)
+    has_rpaths = False
+    for transition in allowed_transitions:
+        rpaths = kw.get(transition)
+        if rpaths:
+            has_rpaths = True
+            if same_type(rpaths, ''):
+                rpaths = (rpaths,)
+            for rpath in rpaths:
+                wftool.doActionFor(context, workflow_action,
+                                   dest_container=rpath,
+                                   initial_transition=transition,
+                                   comment=comment)
+
+    if not has_rpaths:
+        # no target has been specified
+        psm = 'psm_you_must_select_sections_for_publishing'
+
+else:
     # accept, reject, ...
-    if comments:
-        del kw['comments']
-    kw['comment'] = comments
     res = wftool.doActionFor(context, workflow_action, **kw)
     if same_type(res, ()):
         if res[0] == 'ObjectMoved':
@@ -30,24 +52,6 @@ if workflow_action != 'copy_submit':
             if not url.endswith('/'):
                 url += '/'
             url += rpath
-else:
-    # No section has been specified
-    # XXX We should get a list in here
-    if REQUEST and len(REQUEST.form) < 3:
-        psm = 'psm_you_must_select_sections_for_publishing'
-
-    # publishing: copy and initalize proxy into one or more sections
-    allowed_transitions = wftool.getAllowedPublishingTransitions(context)
-    for transition in allowed_transitions:
-        rpaths = kw.get(transition)
-        if rpaths:
-            if same_type(rpaths, ''):
-                rpaths = (rpaths,)
-            for rpath in rpaths:
-                wftool.doActionFor(context, workflow_action,
-                                   dest_container=rpath,
-                                   initial_transition=transition,
-                                   comment=comments)
 
 if REQUEST is not None:
     # If the object has been deleted, we can't redirect to it.
